k8s/ollama-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: ipms
  labels:
    app: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
        - name: container-0
          image: ollama/ollama:latest
          imagePullPolicy: IfNotPresent
          command: ["ollama"]
          args: ["serve"]
          resources:
            limits:
              nvidia.com/gpu: '1'
            requests:
              nvidia.com/gpu: '1'
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /home/ollama
              name: workspace
      restartPolicy: Always
      runtimeClassName: nvidia
      volumes:
        - name: workspace
          persistentVolumeClaim:
            claimName: llm-pvc
