k8s/openwebui-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openwebui
  namespace: ipms
  labels:
    app: openwebui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openwebui
  template:
    metadata:
      labels:
        app: openwebui
    spec:
      containers:
        - name: openwebui
          image: ghcr.io/open-webui/open-webui:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /data
              name: openwebui-data
      volumes:
        - name: openwebui-data
          persistentVolumeClaim:
            claimName: openwebui-pvc
