k8s/vllm-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vllm
  namespace: ipms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vllm
  template:
    metadata:
      labels:
        app: vllm
    spec:
      containers:
        - name: vllm
          image: vllm/vllm-openai:latest
          args:
            - serve
            - qwen/qwen3-32B
            - '--tensor-parallel-size'
            - '2'
            - '--dtype'
            - bfloat16
            - '--kv-cache-dtype'
            - auto
            - '--enforce-eager'
            - '--download-dir'
            - /home/vllm
            - '--max-model-len'
            - '16384'
            - '--max-num-seqs'
            - '8'
          resources:
            limits:
              nvidia.com/gpu: '3'
            requests:
              nvidia.com/gpu: '3'
          volumeMounts:
            - mountPath: /home/vllm
              name: llm-storage
            - mountPath: /dev/shm
              name: dshm
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 8Gi
        - name: llm-storage
          persistentVolumeClaim:
            claimName: llm-pvc
      runtimeClassName: nvidia
