k8s/openwebui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui
  namespace: ipms
  labels:
    app: openwebui
spec:
  type: ClusterIP
  selector:
    app: openwebui
  ports:
    - name: https
      port: 8080
      targetPort: 8080
      protocol: TCP
