k8s/openwebui-svc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-web-ui-ingress
  namespace: ipms
spec:
  ingressClassName: nginx
  rules:
    - host: ai.com.tr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openwebui
                port:
                  number: 8080
  tls:
    - hosts:
        - ai.com.tr
      secretName: ai.com.tr
